@@ -6,6 +6,7 @@ import br.com.tasknoteapp.server.exception.BadLanguageException;
 import br.com.tasknoteapp.server.exception.BadPasswordException;
 import br.com.tasknoteapp.server.exception.BadUuidException;
 import br.com.tasknoteapp.server.exception.EmailAlreadyExistsException;
+import br.com.tasknoteapp.server.exception.EmailNotConfirmedException;
 import br.com.tasknoteapp.server.exception.InvalidCredentialsException;
 import br.com.tasknoteapp.server.exception.MaxLoginLimitAttemptException;
 import br.com.tasknoteapp.server.exception.ResetExpiredException;
@@ -19,6 +20,7 @@ import br.com.tasknoteapp.server.request.UserPatchRequest;
 import br.com.tasknoteapp.server.response.UserResponse;
 import br.com.tasknoteapp.server.response.UserResponseWithToken;
 import br.com.tasknoteapp.server.util.AuthUtil;
+import br.com.tasknoteapp.server.util.SecurityUtil;
 import br.com.tasknoteapp.server.util.TokenUtil;
 import br.com.tasknoteapp.server.util.UuidUtil;
 import jakarta.transaction.Transactional;
@@ -105,7 +107,7 @@ public class AuthService {
    */
   @Transactional
   public UserResponseWithToken signUpNewUser(LoginRequest newUser) {
-    logger.info("Signing up new user: {}", newUser.email());
+    logger.info("Signing up new user: {}", SecurityUtil.redactEmail(newUser.email()));
 
     if (findByEmail(newUser.email()).isPresent()) {
       throw new EmailAlreadyExistsException();
@@ -142,8 +144,9 @@ public class AuthService {
       mailgunEmailService.sendNewUser(user);
     }
 
-    logger.info("User created! ID " + user.getId());
-    return UserResponseWithToken.fromEntity(user, null, getGravatarImageUrl(newUser.email()));
+    logger.info("User created! ID {}", user.getId());
+    return UserResponseWithToken.fromEntity(
+        user, null, getGravatarImageUrl(newUser.email()).orElse(null));
   }
 
   /**
@@ -179,7 +182,7 @@ public class AuthService {
    */
   @Transactional
   public UserResponseWithToken signInUser(LoginRequest login) {
-    logger.info("Signing in user: " + login.email());
+    logger.info("Signing in user: {}", SecurityUtil.redactEmail(login.email()));
 
     Optional<UserEntity> userOptional = findByEmail(login.email());
     if (userOptional.isEmpty()) {
@@ -189,6 +192,12 @@ public class AuthService {
     checkLoginAttemptLimit(userOptional.get().getId());
 
     UserEntity user = userOptional.get();
+
+    if (Objects.isNull(user.getEmailConfirmedAt())) {
+      logger.warn("User {} tried to login but email is not confirmed", user.getId());
+      throw new EmailNotConfirmedException();
+    }
+
     user.setResetToken(null);
     user.setResetPasswordExpiration(null);
 
@@ -198,11 +207,12 @@ public class AuthService {
 
       String token = jwtService.generateToken(user);
 
-      logger.info("User authenticated! Token " + token);
+      logger.info("User authenticated! Token {}", token.substring(0, 6) + "...");
 
       userPwdLimitRepository.deleteAllForUser(user.getId());
       userRepository.save(user);
-      return UserResponseWithToken.fromEntity(user, token, getGravatarImageUrl(login.email()));
+      return UserResponseWithToken.fromEntity(
+          user, token, getGravatarImageUrl(login.email()).orElse(null));
     } catch (BadCredentialsException e) {
       logger.error(
           "BadCredentialsException when logging in user {}: {}", user.getId(), e.getMessage());
@@ -246,7 +256,9 @@ public class AuthService {
     List<UserEntity> users = userRepository.findAll();
     List<UserResponse> usersResponse = new ArrayList<>(users.size());
     users.forEach(
-        u -> usersResponse.add(UserResponse.fromEntity(u, getGravatarImageUrl(u.getEmail()))));
+        u ->
+            usersResponse.add(
+                UserResponse.fromEntity(u, getGravatarImageUrl(u.getEmail()).orElse(null))));
     logger.info("{} user(s) found!", usersResponse.size());
 
     return usersResponse;
@@ -286,7 +298,7 @@ public class AuthService {
     userPwdLimitRepository.deleteAllForUser(currentUser.getId());
     userRepository.delete(currentUser);
 
-    return UserResponse.fromEntity(currentUser, getGravatarImageUrl(email));
+    return UserResponse.fromEntity(currentUser, getGravatarImageUrl(email).orElse(null));
   }
 
   /**
@@ -338,17 +350,18 @@ public class AuthService {
       shouldUpdate = true;
     }
 
-    if (shouldUpdate && currentUser != null) {
+    if (shouldUpdate) {
       userRepository.save(currentUser);
     }
 
     if (emailChanged && hasValidMailgunApiKey()) {
       // send email to older and new account
-      logger.info("Email changed from " + email + " to " + patchRequest.email());
+      logger.info(
+          "Email changed from {} to {}", email, SecurityUtil.redactEmail(patchRequest.email()));
       mailgunEmailService.sendEmailChangedNotification(currentUser, email);
     }
 
-    return UserResponse.fromEntity(currentUser, getGravatarImageUrl(email));
+    return UserResponse.fromEntity(currentUser, getGravatarImageUrl(email).orElse(null));
   }
 
   /**
@@ -375,7 +388,7 @@ public class AuthService {
   @Transactional
   public void confirmUserAccount(String identification) {
     logger.info("Confirming user email account");
-    UUID uuid = null;
+    UUID uuid;
 
     try {
       uuid = UUID.fromString(identification);
@@ -392,11 +405,11 @@ public class AuthService {
     user.setEmailConfirmedAt(LocalDateTime.now());
 
     userRepository.save(user);
-    logger.info("User email address confirmed: " + identification);
+    logger.info("User email address confirmed: {}", identification);
   }
 
   /**
-   * Re-send the confirm email to the user.
+   * Re-send the confirmation email to the user.
    *
    * @param email The email to re-send.
    */
@@ -424,11 +437,11 @@ public class AuthService {
    */
   @Transactional
   public void resetPasswordForUser(String email) {
-    logger.info("Requesting password reset for email " + email);
+    logger.info("Requesting password reset for email {}", email);
 
     Optional<UserEntity> userOptional = userRepository.findByEmail(email);
     if (userOptional.isEmpty()) {
-      logger.info("No user found with this email " + email);
+      logger.info("No user found with email {}", email);
       return;
     }
 
@@ -454,7 +467,7 @@ public class AuthService {
    */
   @Transactional
   public void confirmResetPasswordForUser(PasswordResetRequest request) {
-    logger.info("Saving new password for token " + request.token());
+    logger.info("Saving new password for token {}", request.token());
 
     Optional<UserEntity> userOptional = userRepository.findByResetToken(request.token());
     if (userOptional.isEmpty()) {
@@ -488,12 +501,12 @@ public class AuthService {
       mailgunEmailService.sendPasswordResetConfirmation(user);
     }
 
-    logger.info("New password set for token " + request.token());
+    logger.info("New password set for token {}", request.token());
   }
 
   private Optional<String> getGravatarImageUrl(String email) {
     email = email.toLowerCase().trim();
-    logger.info("Current user email: " + email);
+    logger.info("Current user email: {}", SecurityUtil.redactEmail(email));
 
     try {
       MessageDigest digest = MessageDigest.getInstance("SHA-256");
@@ -525,7 +538,7 @@ public class AuthService {
 
     // if it's more than 3 times in the last 10 minutes, raise timer of 3 hours.
     if (userPwdList.size() >= 3) {
-      UserPwdLimitEntity mostRecent = userPwdList.get(0);
+      UserPwdLimitEntity mostRecent = userPwdList.getFirst();
       logger.warn("Oldest: {}", mostRecent.getWhenHappened());
       Duration duration = Duration.between(mostRecent.getWhenHappened(), LocalDateTime.now());
       if (duration.toMinutes() <= 3L) {
